# nebula

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-single-platform.yml
cmake/: Nebula-config.cmake.in  nebula-config.cmake.in  version.hpp.in
example/: .gitignore  CMakeLists.txt
example/astronomy/: .gitignore  CMakeLists.txt
example/astronomy/source/: game.cpp
include/: camera.h  coordinates.h  ecs.hpp  engine_api.h  event.hpp  functions.h  log.h  log.hpp  meshes.h  meshes.hpp  rendering.hpp  scene.h  scene.hpp  shader.h  shaders.hpp  textures.hpp  window.h  window.hpp
include/ecs/: ecs.hpp  ecsmanager.hpp
include/ecs/components/: camera.hpp  mesh.hpp  program.hpp  surface.hpp  transform.hpp  velocity.hpp
include/game/: game.hpp
include/nebula/: nebula.hpp  stdafx.h
include/nebula/ecs/: core.hpp  ecs.hpp  manager.hpp
include/nebula/ecs/components/: camera.hpp  mesh.hpp  program.hpp  surface.hpp  transform.hpp  velocity.hpp
include/nebula/events/: conversion.hpp  manager.hpp  types.hpp
include/nebula/render/: manager.hpp  types.hpp
include/nebula/resources/: meshes.hpp  shaders.hpp
include/nebula/utils/: conversion.hpp  functions.h  functions.hpp  log.hpp  math.hpp  path.hpp
shaders/: default.glsl  fragment.glsl  geometry.glsl  vertex.glsl
source/: camera.c  coordinates.c  ecs.cpp  event.cpp  functions.c  log.c  log.cpp  main.c  main.cpp  meshes.cpp  rendering.cpp  scene.c  scene.cpp  shader.c  shaders.cpp  textures.cpp  window.c  window.cpp
source/ecs/: core.cpp  ecsmanager.cpp  manager.cpp
source/ecs/components/: camera.cpp  mesh.cpp  program.cpp  transform.cpp  velocity.cpp
source/events/: conversion.cpp  manager.cpp
source/render/: manager.cpp  types.cpp
source/resources/: meshes.cpp  shaders.cpp
source/utils/: conversion.cpp  functions.c  functions.cpp  log.cpp  path.cpp
